2025-11-02
  Buildings
    - Add destruct building to Guard Tower
  CH-46D
    - Fix ramp closing during take-off
  USS Gray 
    - Fix RWR appearance
2025-10-31
  Buildings
    - Add US barrack
    - Add US hangar
  EC-121
    - Initial release
  CH-46D 
    - Initial release
2025-10-29
  Buildings
    - Add US marsden mat 
    - Add US revetment
2025-10-27
  Buildings
    - Add US boom gate
    - Add US barbed wire
    - Add US connex container
    - Add US guard house
2025-10-26
  Buildings
    - Add US watch tower 
    - Add US barrels
2025-10-15
  USS Bon Homme Richard
    - Added CENTER_ connectors to reduce log spam    
2025-09-23
  RA-5C Vigilante
    - Add navigation lights
  RF-101B Voodoo
    - Improve flight model
    - Improve 3d model
  Buildings
    - Add Guard Tower
2025-09-20
  RF-101B Voodoo
    - Initial Release
2025-09-13
  USS Bon Homme Richard
    - Add WSN_20 to WSN_t table so the carrier works without configs from NJ or the destroyers
2025-09-07
  USS Bon Homme Richard, USS Mullany, USS Allen M Sumner, USS Laffey, USS Forrest Sherman, USS Bigelow
    - Prefix Liveries with the CVA/DD designation in brackets, e.g. (DD-942)
  Knox class Destroyer Escorts
    - Prefix Liveries with the CVA/DD designation in brackets, e.g. (DE-1052)
    - Reduce Harpoon missiles to two, already placed in the ASROC launcher
2025-09-04
  USS Enterprise '66
    - Add illumination
2025-09-02
  USS Bon Homme Richard and Generic Essex SCB125
    - Park in reverse, 8 planes work, more congestion happens
2025-08-19
  MiG-21MF
    - Removed strange vertexes below the nose cone
2025-08-15
  Ships
    - Fixed some shell range setting.
    - Add Recoil animation to all cannon, over 100 barrel's animation and rigging
    - Fixed the issue twin barrel mount dual-purpose guns only shoot with one barrel
    - Change short name of ships 
  USS Maddox TI  
    - Fixed Maddox TI front FCS not proper rotatio
  Knox class