@@ -1,0 +1,102 @@
+NUMBER OF ANGELS OF ATTACK AND NUMBER OF SIDESLIP ANGELS
+25;13
+ANGELS OF ATTACK
+-180;-165;-150;-135;-120;-105;-90;-75;-60;-45;-30;-15;0;15;30;45;60;75;90;105;120;135;150;165;180
+SIDESLIP ANGELS
+-90;-75;-60;-45;-30;-15;0;15;30;45;60;75;90
+Cx
+0.6755;0.6755;0.6755;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.6755;0.6755;0.6755
+0.6755;0.6755;0.6755;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.6755;0.6755;0.6755
+0.6755;0.6755;0.6755;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.6755;0.6755;0.6755
+0.7885;0.7885;0.7885;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.7885;0.7885;0.7885
+0.788628;0.788628;0.788628;0.597393;0.596528;0.389374;0.597393;0.597393;0.597393;0.788628;0.788756;0.910892;0.799972;0.910892;0.788756;0.788628;0.597393;0.597393;0.597393;0.389374;0.596528;0.597393;0.788628;0.788628;0.788628
+0.910942;0.910942;0.910942;0.495068;0.493856;0.204701;0.495068;0.495068;0.495068;0.910942;0.910892;0.863006;0.868994;0.863006;0.910892;0.910942;0.495068;0.495068;0.495068;0.204701;0.493856;0.495068;0.910942;0.910942;0.910942
+0.7999;0.7999;0.7999;0.625;0.622869;0.115575;0.625;0.625;0.625;0.7999;0.799972;0.868994;0.857;0.868994;0.799972;0.7999;0.625;0.625;0.625;0.115575;0.622869;0.625;0.7999;0.7999;0.7999
+0.910942;0.910942;0.910942;0.495068;0.493856;0.204701;0.495068;0.495068;0.495068;0.910942;0.910892;0.863006;0.868994;0.863006;0.910892;0.910942;0.495068;0.495068;0.495068;0.204701;0.493856;0.495068;0.910942;0.910942;0.910942
+0.788628;0.788628;0.788628;0.597393;0.596528;0.389374;0.597393;0.597393;0.597393;0.788628;0.788756;0.910892;0.799972;0.910892;0.788756;0.788628;0.597393;0.597393;0.597393;0.389374;0.596528;0.597393;0.788628;0.788628;0.788628
+0.7885;0.7885;0.7885;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.7885;0.7885;0.7885
+0.6755;0.6755;0.6755;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.6755;0.6755;0.6755
+0.6755;0.6755;0.6755;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.6755;0.6755;0.6755
+0.6755;0.6755;0.6755;0.5975;0.596636;0.389568;0.5975;0.5975;0.5975;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.5975;0.5975;0.5975;0.389568;0.596636;0.5975;0.6755;0.6755;0.6755
+Cy
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.6755;0.6755;0.6755;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.6755;0.6755;0.6755
+0.675202;0.675202;0.675202;0.675202;0.674447;0.495171;0.675202;0.675202;0.675202;0.675202;0.675013;0.494764;0.624467;0.494764;0.675013;0.675202;0.675202;0.675202;0.675202;0.495171;0.674447;0.675202;0.675202;0.675202;0.675202
+0.390795;0.390795;0.390795;0.390795;0.390015;0.204169;0.390795;0.390795;0.390795;0.390795;0.3906;0.204447;0.115939;0.204447;0.3906;0.390795;0.390795;0.390795;0.390795;0.204169;0.390015;0.390795;0.390795;0.390795;0.390795
+0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0
+0.390795;0.390795;0.390795;0.390795;0.390015;0.204169;0.390795;0.390795;0.390795;0.390795;0.3906;0.204447;0.115939;0.204447;0.3906;0.390795;0.390795;0.390795;0.390795;0.204169;0.390015;0.390795;0.390795;0.390795;0.390795
+0.675202;0.675202;0.675202;0.675202;0.674447;0.495171;0.675202;0.675202;0.675202;0.675202;0.675013;0.494764;0.624467;0.494764;0.675013;0.675202;0.675202;0.675202;0.675202;0.495171;0.674447;0.675202;0.675202;0.675202;0.675202
+0.6755;0.6755;0.6755;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.6755;0.675311;0.495068;0.625;0.495068;0.675311;0.6755;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.6755;0.6755;0.6755
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.7885;0.788628;0.910942;0.7999;0.910942;0.788628;0.7885;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+Cz
+0.5975;0.5975;0.5975;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.5975;0.5975;0.5975
+0.5975;0.5975;0.5975;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.5975;0.5975;0.5975
+0.5975;0.5975;0.5975;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.5975;0.5975;0.5975
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.788628;0.788628;0.788628;0.788628;0.78914;0.910543;0.788628;0.788628;0.788628;0.597393;0.597177;0.390601;0;0.390601;0.597177;0.597393;0.788628;0.788628;0.788628;0.910543;0.78914;0.788628;0.788628;0.788628;0.788628
+0.910942;0.910942;0.910942;0.910942;0.910741;0.863025;0.910942;0.910942;0.910942;0.495068;0.494765;0.205346;0;0.205346;0.494765;0.495068;0.910942;0.910942;0.910942;0.863025;0.910741;0.910942;0.910942;0.910942;0.910942
+0.7999;0.7999;0.7999;0.7999;0.800189;0.868956;0.7999;0.7999;0.7999;0.625;0.624467;0.115939;0;0.115939;0.624467;0.625;0.7999;0.7999;0.7999;0.868956;0.800189;0.7999;0.7999;0.7999;0.7999
+0.910942;0.910942;0.910942;0.910942;0.910741;0.863025;0.910942;0.910942;0.910942;0.495068;0.494765;0.205346;0;0.205346;0.494765;0.495068;0.910942;0.910942;0.910942;0.863025;0.910741;0.910942;0.910942;0.910942;0.910942
+0.788628;0.788628;0.788628;0.788628;0.78914;0.910543;0.788628;0.788628;0.788628;0.597393;0.597177;0.390601;0;0.390601;0.597177;0.597393;0.788628;0.788628;0.788628;0.910543;0.78914;0.788628;0.788628;0.788628;0.788628
+0.7885;0.7885;0.7885;0.7885;0.789013;0.910593;0.7885;0.7885;0.7885;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.7885;0.7885;0.7885;0.910593;0.789013;0.7885;0.7885;0.7885;0.7885
+0.5975;0.5975;0.5975;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.5975;0.5975;0.5975
+0.5975;0.5975;0.5975;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.5975;0.5975;0.5975
+0.5975;0.5975;0.5975;0.6755;0.674744;0.495476;0.6755;0.6755;0.6755;0.5975;0.597284;0.390795;0;0.390795;0.597284;0.5975;0.6755;0.6755;0.6755;0.495476;0.674744;0.6755;0.5975;0.5975;0.5975
+Mx
+-0.0281;-0.0281;-0.0281;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0281;-0.0281;-0.0281
+-0.0281;-0.0281;-0.0281;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0281;-0.0281;-0.0281
+-0.0281;-0.0281;-0.0281;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0281;-0.0281;-0.0281
+-0.0028;-0.0028;-0.0028;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0028;-0.0028;-0.0028
+-0.002797;-0.002797;-0.002797;-0.002227;-0.002362;-0.03445;-0.002227;-0.002227;-0.002227;-0.002797;-0.002796;-0.001997;-0;0.001997;0.002796;0.002797;-0.002227;-0.002227;-0.002227;0.03445;0.002362;0.002227;-0.002797;-0.002797;-0.002797
+-0;-0;-0;-0.028085;-0.02831;-0.081824;-0.028085;-0.028085;-0.028085;0;-0;-5.2e-005;-0;5.2e-005;0;-0;-0.028085;-0.028085;-0.028085;0.081824;0.02831;0.028085;-0;-0;-0
+0;0;0;-0;-0;-0;-0;-0;-0;-0;0.000105;0.099948;0;-0.099948;-0.000105;0;-0;-0;-0;0;0;0;0;0;0
+0;0;0;0.028085;0.02831;0.081824;0.028085;0.028085;0.028085;-0;0;5.2e-005;0;-5.2e-005;-0;0;0.028085;0.028085;0.028085;-0.081824;-0.02831;-0.028085;0;0;0
+0.002797;0.002797;0.002797;0.002227;0.002362;0.03445;0.002227;0.002227;0.002227;0.002797;0.002796;0.001997;0;-0.001997;-0.002796;-0.002797;0.002227;0.002227;0.002227;-0.03445;-0.002362;-0.002227;0.002797;0.002797;0.002797
+0.0028;0.0028;0.0028;-0.0022;-0.002335;-0.0344;0.0022;0.0022;0.0022;0.0028;0.002799;0.001999;0;-0.001999;-0.002799;-0.0028;0.0022;0.0022;0.0022;0.0344;0.002335;0.0022;0.0028;0.0028;0.0028
+-0.0281;-0.0281;-0.0281;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0281;-0.0281;-0.0281
+-0.0281;-0.0281;-0.0281;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0281;-0.0281;-0.0281
+-0.0281;-0.0281;-0.0281;-0.0022;-0.002335;-0.0344;-0.0022;-0.0022;-0.0022;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0022;-0.0022;-0.0022;0.0344;0.002335;0.0022;-0.0281;-0.0281;-0.0281
+My
+-0.0028;-0.0028;-0.0028;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0028;-0.0028;-0.0028
+-0.0028;-0.0028;-0.0028;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0028;-0.0028;-0.0028
+-0.0028;-0.0028;-0.0028;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0028;-0.0028;-0.0028
+-0.0281;-0.0281;-0.0281;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0281;-0.028073;-0.001999;-0;0.001999;0.028073;0.0281;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0281;-0.0281;-0.0281
+-0.028073;-0.028073;-0.028073;-0.028073;-0.027964;-0.002077;-0.028073;-0.028073;-0.028073;-0.028073;-0.028046;-0.002084;-0;0.002084;0.028046;0.028073;-0.028073;-0.028073;-0.028073;0.002077;0.027964;0.028073;-0.028073;-0.028073;-0.028073
+-0.002217;-0.002217;-0.002217;-0.002217;-0.002556;-0.082852;-0.002217;-0.002217;-0.002217;-0.002217;-0.002302;-0.083113;-0;0.083113;0.002302;0.002217;-0.002217;-0.002217;-0.002217;0.082852;0.002556;0.002217;-0.002217;-0.002217;-0.002217
+0.0344;0.0344;0.0344;0.0344;0.034256;-0;0.0344;0.0344;0.0344;0.0344;0.034364;-0;0;0;-0.034364;-0.0344;0.0344;0.0344;0.0344;0;-0.034256;-0.0344;0.0344;0.0344;0.0344
+0.002217;0.002217;0.002217;0.002217;0.002556;0.082852;0.002217;0.002217;0.002217;0.002217;0.002302;0.083113;0;-0.083113;-0.002302;-0.002217;0.002217;0.002217;0.002217;-0.082852;-0.002556;-0.002217;0.002217;0.002217;0.002217
+0.028073;0.028073;0.028073;0.028073;0.027964;0.002077;0.028073;0.028073;0.028073;0.028073;0.028046;0.002084;0;-0.002084;-0.028046;-0.028073;0.028073;0.028073;0.028073;-0.002077;-0.027964;-0.028073;0.028073;0.028073;0.028073
+0.0281;0.0281;0.0281;-0.0281;-0.027991;-0.001993;0.0281;0.0281;0.0281;0.0281;0.028073;0.001999;0;-0.001999;-0.028073;-0.0281;0.0281;0.0281;0.0281;0.001993;0.027991;0.0281;0.0281;0.0281;0.0281
+-0.0028;-0.0028;-0.0028;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0028;-0.0028;-0.0028
+-0.0028;-0.0028;-0.0028;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0028;-0.0028;-0.0028
+-0.0028;-0.0028;-0.0028;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0028;-0.002799;-0.001999;-0;0.001999;0.002799;0.0028;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0028;-0.0028;-0.0028
+Mz
+-0.0022;-0.0022;-0.0022;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0022;-0.0022;-0.0022
+-0.0022;-0.0022;-0.0022;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0022;-0.0022;-0.0022
+-0.0022;-0.0022;-0.0022;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0022;-0.0022;-0.0022
+-0.0022;-0.0022;-0.0022;-0.0028;-0.002797;-0.001993;-0.0028;-0.0028;-0.0028;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0028;-0.0028;-0.0028;0.001993;0.002797;0.0028;-0.0022;-0.0022;-0.0022
+-0.002227;-0.002227;-0.002227;-0.002797;-0.002794;-0.001991;-0.002797;-0.002797;-0.002797;-0.002227;-0.002261;-0.03445;0.034469;0.03445;0.002261;0.002227;-0.002797;-0.002797;-0.002797;0.001991;0.002794;0.002797;-0.002227;-0.002227;-0.002227
+-0.028085;-0.028085;-0.028085;-0;-0;-5.2e-005;0;0;0;-0.028085;-0.028141;-0.081767;0.099948;0.081767;0.028141;0.028085;0;0;0;5.2e-005;0;0;-0.028085;-0.028085;-0.028085
+-0;-0;-0;0;0.000419;0.099634;-0;-0;-0;-0;-0;-0;0;0;0;0;-0;-0;-0;-0.099634;-0.000419;-0;-0;-0;-0
+0.028085;0.028085;0.028085;0;0;5.2e-005;-0;-0;-0;0.028085;0.028141;0.081767;-0.099948;-0.081767;-0.028141;-0.028085;-0;-0;-0;-5.2e-005;-0;-0;0.028085;0.028085;0.028085
+0.002227;0.002227;0.002227;0.002797;0.002794;0.001991;0.002797;0.002797;0.002797;0.002227;0.002261;0.03445;-0.034469;-0.03445;-0.002261;-0.002227;0.002797;0.002797;0.002797;-0.001991;-0.002794;-0.002797;0.002227;0.002227;0.002227
+0.0022;0.0022;0.0022;-0.0028;-0.002797;-0.001993;0.0028;0.0028;0.0028;0.0022;0.002234;0.0344;-0.0344;-0.0344;-0.002234;-0.0022;0.0028;0.0028;0.0028;0.001993;0.002797;0.0028;0.0022;0.0022;0.0022
+-0.0022;-0.0022;-0.0022;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0022;-0.0022;-0.0022
+-0.0022;-0.0022;-0.0022;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0022;-0.0022;-0.0022
+-0.0022;-0.0022;-0.0022;-0.0281;-0.027991;-0.001993;-0.0281;-0.0281;-0.0281;-0.0022;-0.002234;-0.0344;0.0344;0.0344;0.002234;0.0022;-0.0281;-0.0281;-0.0281;0.001993;0.027991;0.0281;-0.0022;-0.0022;-0.0022
+AERODYNAMIC AREAS
+1
+REFERENCE LENGTHS
+1
+MOMENTS OF INERTIA
+0.166;0;0
+0;0.166;0
+0;0;0.166
+GEOMETRIC CENTER
+0;0.5;0
+CENTER OF MASS
+0;0.4;0
