@@ -1,3 +1,6 @@
+2025-11-04
+  Buildings
+    - Make Conex Halfsize sling loadable as Cargo
 2025-11-02
   Buildings
     - Add destruct building to Guard Tower
